# shufflepic

./: .gitignore  README.md
DOC/: ShufflePic v1.0 操作マニュアル.md  ShufflePic v1.0 詳細設計書.md  ShufflePic 基盤詳細設計（前身）.md
DOC/archive/: ShufflePic v1.0 デコード非同期化 設計提案.md  ShufflePic v1.0 実装報告.md  ShufflePic v1.0 要求定義書.md  ShufflePic ドキュメント索引.md
assets/: ICON_ASSET_NOTES.md
docs/: index.html
v1.0/: Cargo.toml  build.rs
v1.0/packaging/: AppxManifest.xml  README.md  gen-assets.ps1  make-msix.ps1  sign-and-install.ps1
v1.0/src/: app.rs  cache.rs  decoder.rs  image_loader.rs  main.rs  persist.rs  playback.rs  quarantine.rs  scanner.rs  settings.rs
