[package]
name = "shufflepic"
version = "1.0.0"
edition = "2021"
description = "ランダム無重複で1〜2枚を自動送りする写真スライドショー（ShufflePic）"
publish = false

[dependencies]
eframe = "0.31"
egui = "0.31"
image = "0.25"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"
crossbeam-channel = "0.5"

[build-dependencies]
winresource = "0.1"
